--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vue/cli-service": "~4.5.19",
     "@vue/compiler-sfc": "^3.0.0",
     "sass": "^1.26.5",
-    "sass-loader": "^8.0.2"
+    "sass-loader": "^8.0.2",
+    "svg-sprite-loader": "^6.0.9"
   }
 }
